<resources>
    <string name="app_name">TechMarket_FinalProject</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="signup"><u>Sign Up</u></string>
    <string name="signin"><u>Sign In</u></string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="your_name">Your Name</string>
    <string name="logout">Logout</string>
    <string name="create_account">Create Account</string>
    <string name="signin_with_your_email_and_password">Signin with your email and password</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="email_profile">Email:</string>
    <string name="email_profile_example">name@example.com</string>
    <string name="password_profile">Password:</string>
    <string name="full_name_profile">Full Name</string>
    <string name="full_name_lbl_profile">Full Name:</string>
    <string name="address_of_the_user">Address of the user</string>
    <string name="home_page">Home Page</string>
    <string name="order_now">Order Now</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign In</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="sign_up_page">Sign Up Page</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_page">Sign In Page</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="adding_new_product">Adding New Product</string>
    <string name="product_id">Product ID</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_description">Product Description</string>
    <string name="product_review">Product Review</string>
    <string name="add_product">Add Product</string>
    <string name="rating">Rating</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="my_cart">My Cart</string>
    <string name="my_favorite_products">My Favorite Products</string>
    <string name="select_category">Select Category</string>
    <string name="category_product">Category Product</string>
    <string name="your_cart_is_empty">Your Cart Is Empty</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="favorite_products_message">You have not selected any\n favorite products yet.\n\nHope you find a favorite product</string>

    <string name="intro_title"><font color="#48D461">TechMarket</font> is the cheapest e-shopping destination!</string>
    <string name="into_sub_title">Get the latest electronics.\nShop now and get the best deals!</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="welcome">Welcome,</string>
    <string name="user_name">User Name</string>
    <string name="subtotal">Subtotal:</string>
    <string name="delivery_fee">Delivery Fee:</string>
    <string name="discount">Discount:</string>
    <string name="enter_your_coupon">Enter Your Coupon</string>
    <string name="apply">Apply</string>

    <string name="description_example">Smart Watch A with multiple features including fitness tracking, sleep monitoring, customizable watch faces, and notifications for calls, texts, and apps. It also has a sleek design and is water-resistant up to 50 meters.</string>
    <string name="delete_product">Delete Product</string>
    <string name="update_product">Update Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="my_orders">My Orders</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="search">Search</string>
    <string name="example_result_text">Result for Macbook</string>
    <string name="example_found_text">Found 24 products</string>
    <string name="category_title">Category Title</string>
    <string name="title">Title</string>
    <string name="example_price">$570.00</string>
    <string name="score_example">(3.5)</string>
    <string name="review_example">12</string>
    <string name="plus_text">+</string>
    <string name="quantity_cart_text">0</string>
    <string name="minus_text">__</string>
    <string name="coupon_example">ADJ3AK</string>
    <string name="promocode_applied">Promocode applied</string>
    <string name="subtotal_price_example">$800.00</string>
    <string name="delivery_example">$5.00</string>
    <string name="discount_example">40%</string>
    <string name="checkout_button_text">Checkhout for $485.00</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_subtitle">Provide your account\'s email for which you want to reset the password</string>
    <string name="reset_password">Reset Password</string>
    <string name="full_name_profile_title">Full Name</string>
    <string name="on_sale_products">On sale Products</string>
    <string name="see_all">See all</string>
    <string name="categories">Categories</string>
    <string name="content_des_image_product">Image of the product</string>
    <string name="content_des_on_sale_icon">An icon indicating that the product is on sale</string>
    <string name="all">All</string>
    <string name="smartphones">Smartphones</string>
    <string name="headphones">Headphones</string>
    <string name="smartwatches">Smartwatches</string>
    <string name="laptops">Laptops</string>
    <string name="desktops">Desktops</string>
    <string name="televisions">Televisions</string>
    <string name="quantity_example">Quantity: 1</string>
    <string name="select_image">Select Image</string>
    <string name="product_rating">Product Rating</string>
    <string name="discount_percentage">Discount Percentage</string>
    <string name="empty_order_history_message">Your order history is empty\n\n Hope you make a purchase soon!</string>
    <string name="empty_wishlist_message">You haven\'t saved a product \nyou liked yet\n\n Hope you find a product soon!</string>
    <string name="error_message_auth">The supplied auth credential is incorrect, malformed or has expired.</string>
</resources>