<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="175dp"
    android:layout_height="245dp"
    android:layout_margin="8dp"
    android:background="@drawable/grey_background"
    android:elevation="3dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/product_image_view"
        android:layout_width="175dp"
        android:layout_height="155dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cp_1" />

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/white_background_bottom_rd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_image_view" />

    <TextView
        android:id="@+id/product_title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:lines="2"
        android:maxLines="2"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rating_bar_product"
        app:layout_constraintTop_toBottomOf="@+id/rating_bar_product" />

    <RatingBar
        android:id="@+id/rating_bar_product"
        style="@android:style/Widget.DeviceDefault.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:indeterminate="false"
        android:isIndicator="true"
        android:numStars="5"
        android:progressTint="@color/star_color"
        android:rating="3.5"
        android:secondaryProgressTint="@color/star_color"
        android:stepSize="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_image_view" />

    <TextView
        android:id="@+id/old_price_product_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_price"
        android:textColor="@color/dark_grey2"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/product_title_text"
        app:layout_constraintTop_toBottomOf="@+id/product_title_text" />

    <TextView
        android:id="@+id/new_price_product_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/example_price"
        android:textColor="@color/new_green"
        app:layout_constraintBottom_toBottomOf="@+id/old_price_product_text"
        app:layout_constraintStart_toEndOf="@+id/old_price_product_text"
        app:layout_constraintTop_toTopOf="@+id/old_price_product_text" />

    <TextView
        android:id="@+id/rating_product_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/score_example"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/rating_bar_product"
        app:layout_constraintStart_toEndOf="@+id/rating_bar_product"
        app:layout_constraintTop_toTopOf="@+id/rating_bar_product" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/new_price_product_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/new_price_product_text"
        app:srcCompat="@drawable/green_review" />

    <TextView
        android:id="@+id/reviews_product_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:text="@string/review_example"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView20"
        app:layout_constraintEnd_toStartOf="@+id/imageView20"
        app:layout_constraintTop_toTopOf="@+id/imageView20" />

</androidx.constraintlayout.widget.ConstraintLayout>